--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/pixagram-blockchain/turboserial"
   },
   "engines": {
     "node": ">=0.8.0"
